<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Motor_Params" Id="{9c0a3fe5-9ef1-4873-8ac3-bebb41afe15f}">
    <Declaration><![CDATA[TYPE ST_Motor_Params :
STRUCT
	// Struct used to update HMI DATAGRID values and ensure selection of editable 
	// HMI DATAGRID array index corresonds to the correct motor object index.
	rRPM				: REAL;
	rTorque				: REAL;
	rCurrent			: REAL;
	rVoltage			: REAL;
	rFrequency			: REAL;
	iControlMethod		: UINT;
	iState				: UINT;
	bSelectMotor		: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>