<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{821d065c-3177-4706-8438-32f6bd61d27d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
		
	iNumb_Motors			:INT	:= 1;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>