<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="HMI" Id="{30a53268-b425-4cff-8a70-f95ad9e47950}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	// Input from HMI
	iReference_Input 			:UINT;
	// Input from HMI
	iControler_Input			:UINT;
	// Input from HMI
	aMotor_Selection 			: ARRAY[0..GVL.iNumb_Motors] OF	BOOL;

END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>